--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @application.name %></h1>
-<h3><%= @application.address %></h3>
+<h3><%= @application.address %> years old</h3>
 <h3><%= @application.home_description %></h3>
 <h3><%= @application.status %></h3>
 
