--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @application.name %></h1>
-<h3><%= @application.address %></h3>
-<h3><%= @application.home_description %></h3>
+<h3>Address: <%= @application.address %></h3>
+<h3>Home Description: <%= @application.home_description %></h3>
 <h3><%= @application.status %></h3>
 
