--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -2,4 +2,13 @@
 <h3>Address: <%= @application.address %></h3>
 <h3>Home Description: <%= @application.home_description %></h3>
 <h3>Status: <%= @application.status %></h3>
+<br/>
+<br/>
+
+<h3>Add a pet to this application:</h3>
+<%= form_with url: "/pets", method: :get, local: true do |f| %>
+  <%= f.label :search %>
+  <%= f.text_field :search %>
+  <%= f.submit "Search" %>
+<% end %>
 
