--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -6,7 +6,7 @@
 <br/>
 
 <h3>Add a pet to this application:</h3>
-<%= form_with url: "/pets", method: :get, local: true do |f| %>
+<%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
   <%= f.label :search %>
   <%= f.text_field :search %>
   <%= f.submit "Search" %>
