Update adopt this pet form

--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -16,6 +16,7 @@
 <% if params[:search].present? %>
   <% @pets.each do |pet| %>
     <%= pet.name %>
+    Adopt this pet: <%= 
     <br/>
   <% end %>
 <% end %>
