--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @application.name %></h1>
-<h3>Address: <%= @application.address %></h3>
-<h3>Home Description: <%= @application.home_description %></h3>
-<h3>Status: <%= @application.status %></h3>
+<h3>Address: </h3><%= @application.address %>
+<h3>Home Description: </h3><%= @application.home_description %>
+<h3>Status: </h3><%= @application.status %>
 <br/>
 <br/>
 
@@ -19,6 +19,11 @@
     <form action="/applications/<%=@application.id%>"
       <input type ="hidden" id="pet" name="pet" value=<%= "pet.id" %> />
       <input type ="submit" value="Adopt this pet">
+    </form>
     <br/>
   <% end %>
+<% end %>
+
+<% @application.pets.each do |pet| %>
+  <%= pet.name %>
 <% end %>
