--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -2,6 +2,12 @@
 <h3>Address: </h3><%= @application.address %>
 <h3>Home Description: </h3><%= @application.home_description %>
 <h3>Status: </h3><%= @application.status %>
+<h3>Pets: </h3>
+<div
+  <% @application.pets.each do |pet| %>
+    <a href="/pets/<%pet.id%>"><%=pet.name%></a><br/>
+  <% end %>
+</div>
 <br/>
 <br/>
 
@@ -24,6 +30,11 @@
   <% end %>
 <% end %>
 
-<% @application.pets.each do |pet| %>
-  <%= pet.name %>
+<% if params[:pet].present? %>
+  <h3>Submit Your Application</h3>
+  <p>Please enter why you think you'd make a good owner:</p>
+  <%= form_with url: "/applications/#{@application.id}", method: :patch, local: true do |f| %>
+    <%= f.text_area :description, size: '50x5'%><br/>
+    <%= f.submit "Submit Application" %>
+  <% end %>
 <% end %>
