--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -32,9 +32,9 @@
 
 <% if params[:pet].present? %>
   <h3>Submit Your Application</h3>
-  <p>Please enter why you think you'd make a good owner:</p>
+  <p>Please describe why you would make a good pet owner:</p>
   <%= form_with url: "/applications/#{@application.id}", method: :patch, local: true do |f| %>
-    <%= f.text_area :description, size: '50x5'%><br/>
+    <%= f.text_area :description, size: '40x5'%><br/>
     <%= f.submit "Submit Application" %>
   <% end %>
 <% end %>
