--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -11,12 +11,14 @@
 <br/>
 <br/>
 
+<% if @application.status == "In Progress" %>
 <h3>Add a pet to this application:</h3>
 
-<%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
-  <%= f.label :search %>
-  <%= f.text_field :search %>
-  <%= f.submit "Search" %>
+  <%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
+    <%= f.label :search %>
+    <%= f.text_field :search %>
+    <%= f.submit "Search" %>
+  <% end %>
 <% end %>
 
 <br/>
